#160 - Unittest überarbeitet